Starting the JS

--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,23 @@
             <div class="sidebar-content">
 
             </div>
+            <footer class="sidebar-footer">
+                <dialog class="new-project-dialog" aria-label="New Project">
+                    <div class="close-dialog">
+                        <button class="close-dialog-btn">X</button>
+                    </div>
+                    <div class="dialog-container">
+                        <h2>New Project</h2>
+                        <form class="add-project-form hidden" method="dialog">
+                            <div class="form-section">
+                                <label for="name">Project Name:</label>
+                                <input type="text" name="projectName" id="name">
+                            </div>
+                            <button class="add-project-btn">Add Project</button>
+                        </form>
+                    </div>
+                </dialog>
+            </footer>
         </div>
         <div class="content">
 
