--- a/src/index.html
+++ b/src/index.html
@@ -45,7 +45,7 @@
             </div>
             <div class="dialog-container">
                 <h2>New Task</h2>
-                <form class="add-task-form hidden" method="dialog">
+                <form class="add-task-form" method="dialog">
                     <div class="form-section">
                         <label for="taskTitle">Title:</label>
                         <input type="text" name="titleInput" id="taskTitle" required>
@@ -74,7 +74,7 @@
 
         <div class="delete-confirmation-modal hidden">
             <div class="del-modal-content">
-                <p>Are you sure you want to delete this task?</p>
+                <p id="delete-modal-message">Are you sure you want to delete this?</p>
                 <div class="del-modal-options">
                     <input type="checkbox" id="dont-ask-again">
                     <label for="dont-ask-again">Don't ask me again</label>
