Back to modals and working on Home Page

--- a/src/index.html
+++ b/src/index.html
@@ -9,18 +9,36 @@
 </head>
 <body>
     <main>
-        <div class="header">
-            <button id="hamburger-btn" aria-label="Toggle Menu">
-                <span class="hamburger-icon"></span>
-            </button>
-        </div>
-        <div class="sidebar hidden">
-            <div class="sidebar-header">
-                <img src="./images/logo.jpeg" alt="logo" width="35" height="35" id="header-logo">
-                <p><a href="https://github.com/NyctoRAA">ra.exe</a></p>
+        <header>
+            <div class="header-appInfo">
+                <img src="./images/appLogo.jpeg" alt="appLogo" width="50" height="50" id="app-logo">
                 <h1 class="app-name-title">Nycto Notes</h1>
-            </div> 
+            </div>
+            <div class="header-author">
+                <img src="./images/logo.jpeg" alt="logo" width="35" height="35" id="author-logo">
+                <p><a href="https://github.com/NyctoRAA">ra.exe</a></p>
+            </div>
+        </header>
+        <div class="sidebar">
+            <dialog class="new-project-dialog" aria-label="New Project">
+                <div class="close-dialog">
+                    <button class="close-project-dialog-btn">X</button>
+                </div>
+                <div class="dialog-container">
+                    <h2>New Project</h2>
+                    <form class="add-project-form" method="dialog">
+                        <div class="form-section">
+                            <label for="projectName">Project Name:</label>
+                            <input type="text" name="projectName" id="projectName" maxlength="20">
+                        </div>
+                        <button class="submit-project-btn">Submit</button>
+                    </form>
+                </div>
+            </dialog>
             <div class="sidebar-content">
+                <button class="home-btn">Home</button>
+
+                
                 <h3 class="sidebar-title">Notes</h3>
                 <ul class="notes-ul"></ul>
                 <div class="projects header">
@@ -35,6 +53,7 @@
             </div>
         </div>
         <div class="content">
+            <h1 class="title-animation" id="homePage-title">Nycto Notes</h1>
             <div class="tasks-container"></div>
         </div>
         <dialog class="new-task-dialog" aria-label="New Task">
