Working on some styles and making a simple home page with an animated title

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nycto Notes</title>
+    <title>Nycto Notes - Projects</title>
     <link rel="icon" href="./images/favicon.ico" type="image/x-icon">
     <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon">
 </head>
@@ -44,7 +44,7 @@
                 <div class="projects header">
                     <h3 class="sidebar-title">Projects</h3>
                     <button class="add-project-btn">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                        <svg class="add-buttons-svg" xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                             <line x1="12" y1="5" x2="12" y2="19"></line>
                             <line x1="5" y1="12" x2="19" y2="12"></line>
                           </svg>                          
@@ -53,7 +53,9 @@
             </div>
         </div>
         <div class="content">
-            <h1 class="title-animation" id="homePage-title">Nycto Notes</h1>
+            <div class="title-container">
+                <h1 class="title-animation" id="homePage-title">Nycto Notes</h1>
+            </div>
             <div class="tasks-container"></div>
         </div>
         <dialog class="new-task-dialog" aria-label="New Task">
