Changing sidebar styles

--- a/src/index.html
+++ b/src/index.html
@@ -41,7 +41,7 @@
                 
                 <h3 class="sidebar-title">Notes</h3>
                 <ul class="notes-ul"></ul>
-                <div class="projects header">
+                <div class="projects-header">
                     <h3 class="sidebar-title">Projects</h3>
                     <button class="add-project-btn">
                         <svg class="add-buttons-svg" xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
@@ -54,7 +54,7 @@
         </div>
         <div class="content">
             <div class="title-container">
-                <h1 class="title-animation" id="homePage-title">Nycto Notes</h1>
+                
             </div>
             <div class="tasks-container"></div>
         </div>
