Changing styles on the sidebar

--- a/src/index.html
+++ b/src/index.html
@@ -37,10 +37,13 @@
             </dialog>
             <div class="sidebar-content">
                 <button class="home-btn">Home</button>
-
-                
-                <h3 class="sidebar-title">Notes</h3>
-                <ul class="notes-ul"></ul>
+                <div class="notes-header">
+                    <h3 class="sidebar-title">Notes</h3>
+                    <ul class="notes-ul">
+                        <li>See Notes by Due Date</li>
+                        <li>See Notes by Priority</li>
+                    </ul>
+                </div>
                 <div class="projects-header">
                     <h3 class="sidebar-title">Projects</h3>
                     <button class="add-project-btn">
