Styling the modals

--- a/src/index.html
+++ b/src/index.html
@@ -31,7 +31,7 @@
                             <label for="projectName">Project Name:</label>
                             <input type="text" name="projectName" id="projectName" maxlength="20">
                         </div>
-                        <button class="submit-project-btn">Submit</button>
+                        <button class="submit-project-btn">Add</button>
                     </form>
                 </div>
             </dialog>
@@ -89,7 +89,7 @@
                         </select>
                     </div>
                     <div class="submit-btn-container">
-                        <button class="submit-task-btn" type="submit">Submit</button>
+                        <button class="submit-task-btn" type="submit">Add</button>
                     </div>
                 </form>
             </div>
