Working on modal styles

--- a/src/index.html
+++ b/src/index.html
@@ -25,10 +25,10 @@
                     <button class="close-project-dialog-btn">X</button>
                 </div>
                 <div class="dialog-container">
-                    <h2>New Project</h2>
                     <form class="add-project-form" method="dialog">
+                        <h3>New Project</h3>
                         <div class="form-section">
-                            <label for="projectName">Project Name:</label>
+                            <label for="projectName">Project Name</label>
                             <input type="text" name="projectName" id="projectName" maxlength="20">
                         </div>
                         <button class="submit-project-btn">Add</button>
@@ -66,7 +66,7 @@
                 <button class="close-task-dialog-btn">X</button>
             </div>
             <div class="dialog-container">
-                <h2>New Task</h2>
+                <h3 class="task-modal-title">New Task</h3>
                 <form class="add-task-form" method="dialog">
                     <div class="form-section">
                         <label for="taskTitle">Title:</label>
