Almost finished styling the modals

--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,7 @@
                 </div>
                 <div class="dialog-container">
                     <form class="add-project-form" method="dialog">
-                        <h3>New Project</h3>
+                        <h3 class="project-modal-title">New Project</h3>
                         <div class="form-section">
                             <label for="projectName">Project Name</label>
                             <input type="text" name="projectName" id="projectName" maxlength="20">
