Fixed main issues

--- a/src/index.html
+++ b/src/index.html
@@ -53,6 +53,9 @@
                           </svg>                          
                     </button>
                 </div>
+                <div class="projects-container">
+                    
+                </div>
             </div>
         </div>
         <div class="content">
@@ -75,11 +78,11 @@
                     <div class="form-section">
                         <label for="taskDescription">Description:</label>
                         <!-- <input type="text" name="descInput" id="taskDescription" maxlength="300" required> -->
-                         <textarea name="descInput" id="taskDescription" maxlength="300" required></textarea>
+                         <textarea name="descInput" id="taskDescription" maxlength="300"></textarea>
                     </div>
                     <div class="form-section">
                         <label for="dueDate">Due Date:</label>
-                        <input type="datetime-local" name="dateInput" id="dueDate" required>
+                        <input type="datetime-local" name="dateInput" id="dueDate">
                     </div>
                     <div class="form-section">
                         <label for="taskPriority">Priority:</label>
