Fixed some problems, sort by due date left to fix

--- a/src/index.html
+++ b/src/index.html
@@ -40,8 +40,8 @@
                 <div class="notes-header">
                     <h3 class="sidebar-title">Notes</h3>
                     <ul class="notes-ul">
-                        <li>See Notes by Due Date</li>
-                        <li>See Notes by Priority</li>
+                        <li class="sort-by-dueDate">See Notes by Due Date</li>
+                        <li class="sort-by-priority">See Notes by Priority</li>
                     </ul>
                 </div>
                 <div class="projects-header">
@@ -54,7 +54,7 @@
                     </button>
                 </div>
                 <div class="projects-container">
-                    
+
                 </div>
             </div>
         </div>
@@ -88,6 +88,7 @@
                         <label for="taskPriority">Priority:</label>
                         <select name="priorityInput" id="taskPriority">
                             <option value="Low">Low</option>
+                            <option value="Medium">Medium</option>
                             <option value="High">High</option>
                         </select>
                     </div>
