Changing the way dueDates work and still trying to fix sortByDueDate

--- a/src/index.html
+++ b/src/index.html
@@ -82,7 +82,7 @@
                     </div>
                     <div class="form-section">
                         <label for="dueDate">Due Date:</label>
-                        <input type="datetime-local" name="dateInput" id="dueDate">
+                        <input type="datetime-local" name="dateInput" id="dueDate" value="">
                     </div>
                     <div class="form-section">
                         <label for="taskPriority">Priority:</label>
