--- a/src/index.html
+++ b/src/index.html
@@ -10,15 +10,17 @@
 <body>
     <main>
         <header>
+            <div class="hamburger-btn-container">
+                <button class="hamburger-btn" aria-label="Open Menu">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="32" height="32">
+                    <path d="M3 6h18M3 12h18M3 18h18" stroke="currentColor" stroke-width="2" stroke-linecap="round" />
+                    </svg>
+                </button>
+            </div>
             <div class="header-appInfo">
                 <img src="./images/appLogo.jpeg" alt="appLogo" width="50" height="50" id="app-logo">
                 <h1 class="app-name-title">Nycto Notes</h1>
             </div>
-            <button class="hamburger-btn" aria-label="Open Menu">
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="32" height="32">
-            <path d="M3 6h18M3 12h18M3 18h18" stroke="currentColor" stroke-width="2" stroke-linecap="round" />
-        </svg>
-    </button>
             <div class="header-author">
                 <button class="theme-toggle-btn">
                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 64" width="32" height="32" id="themeToggleIcon" style="cursor: pointer; fill: currentColor;"><circle cx="32" cy="24" r="12" fill="currentColor" /><rect x="28" y="36" width="8" height="10" fill="currentColor" /><line x1="32" y1="4" x2="32" y2="12" stroke="currentColor" stroke-width="2" /><line x1="32" y1="36" x2="32" y2="44" stroke="currentColor" stroke-width="2" /><line x1="20" y1="10" x2="24" y2="16" stroke="currentColor" stroke-width="2" /><line x1="44" y1="10" x2="40" y2="16" stroke="currentColor" stroke-width="2" /><line x1="10" y1="24" x2="18" y2="24" stroke="currentColor" stroke-width="2" /><line x1="54" y1="24" x2="46" y2="24" stroke="currentColor" stroke-width="2" /></svg>
@@ -44,7 +46,6 @@
                 </div>
             </dialog>
             <div class="sidebar-content">
-                <button class="home-btn">Home</button>
                 <div class="notes-header">
                     <h3 class="sidebar-title">Notes</h3>
                     <ul class="notes-ul">
